--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <!-- HEADER -->
   <header>
     <h1>Sushmitha Vashist</h1>
     <p class="tagline">
@@ -17,54 +18,86 @@
 
     <div class="links">
       <a href="https://github.com/5ushh" target="_blank">GitHub</a>
-      <a href="#" target="_blank">Resume</a>
+      <a href="resume.pdf" target="_blank">Resume</a>
       <a href="#projects">Projects</a>
     </div>
   </header>
 
+  <!-- ABOUT -->
   <section id="about">
     <h2>About</h2>
     <p>
       I am a graduate student in Computer Engineering at NYU with hands-on
-      experience building data pipelines, machine learning systems, and
-      cloud-based applications. My interests lie in systems engineering,
+      experience building distributed data pipelines, machine learning systems,
+      and cloud-based applications. My interests lie in systems engineering,
       scalable infrastructure, and applied machine learning.
     </p>
   </section>
 
+  <!-- PROJECTS -->
   <section id="projects">
     <h2>Projects</h2>
 
     <div class="project">
-      <h3>SocialPulse</h3>
+      <h3>
+        <a href="projects/socialpulse.html">SocialPulse</a>
+      </h3>
       <p>
-        A big-data NLP pipeline for sentiment analysis, topic modeling, and
-        virality prediction using Spark and Streamlit.
+        Distributed big-data NLP pipeline for sentiment analysis, topic modeling,
+        and virality prediction at scale.
       </p>
       <p class="tech">Spark • Python • NLP • Streamlit</p>
     </div>
 
     <div class="project">
-      <h3>Fake Account Detector</h3>
+      <h3>
+        <a href="projects/fake-account-detector.html">Fake Account Detector</a>
+      </h3>
       <p>
-        Machine learning system to detect fake social media accounts using
+        Machine learning system to identify fake social media accounts using
         NLP-based feature engineering and classification models.
       </p>
       <p class="tech">Python • Scikit-learn • NLP</p>
     </div>
 
     <div class="project">
-      <h3>BigMart Sales Predictor</h3>
+      <h3>
+        <a href="projects/bigmart.html">BigMart Sales Predictor</a>
+      </h3>
       <p>
-        End-to-end machine learning pipeline to predict retail sales using
-        regression models and structured data processing.
+        End-to-end machine learning pipeline for retail sales forecasting using
+        structured data and regression models.
       </p>
-      <p class="tech">Python • Pandas • ML</p>
+      <p class="tech">Python • Pandas • Machine Learning</p>
+    </div>
+
+    <div class="project">
+      <h3>
+        <a href="projects/iot-health.html">IoT Health Monitor</a>
+      </h3>
+      <p>
+        IoT-based health monitoring system using sensors and MQTT for real-time
+        data collection and analysis.
+      </p>
+      <p class="tech">ESP32 • MQTT • Sensors • Python</p>
+    </div>
+
+    <div class="project">
+      <h3>
+        <a href="projects/student-stress.html">Student Stress Predictor</a>
+      </h3>
+      <p>
+        Predictive machine learning model to analyze and forecast student stress
+        levels based on behavioral and academic indicators.
+      </p>
+      <p class="tech">Python • ML • Data Analysis</p>
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer>
     <p>© 2025 Sushmitha Vashist</p>
   </footer>
 </body>
 </html>
+
