--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
     <div class="links">
       <a href="https://github.com/5ushh" target="_blank">GitHub</a>
-      <a href="resume.pdf" target="_blank">Resume</a>
       <a href="#projects">Projects</a>
     </div>
   </header>
@@ -28,9 +27,10 @@
     <h2>About</h2>
     <p>
       I am a graduate student in Computer Engineering at NYU with hands-on
-      experience building distributed data pipelines, machine learning systems,
-      and cloud-based applications. My interests lie in systems engineering,
-      scalable infrastructure, and applied machine learning.
+      experience building distributed systems, data pipelines, and machine
+      learning applications. My work spans systems engineering, networking,
+      scalable data processing, and applied machine learning, with a strong
+      emphasis on practical, end-to-end implementations.
     </p>
   </section>
 
@@ -39,59 +39,60 @@
     <h2>Projects</h2>
 
     <div class="project">
-      <h3>
-        <a href="projects/socialpulse.html">SocialPulse</a>
-      </h3>
+      <h3>SocialPulse</h3>
       <p>
         Distributed big-data NLP pipeline for sentiment analysis, topic modeling,
-        and virality prediction at scale.
+        and virality prediction using large-scale social media data.
       </p>
       <p class="tech">Spark • Python • NLP • Streamlit</p>
     </div>
 
     <div class="project">
-      <h3>
-        <a href="projects/fake-account-detector.html">Fake Account Detector</a>
-      </h3>
+      <h3>Fake Account Detector</h3>
       <p>
         Machine learning system to identify fake social media accounts using
-        NLP-based feature engineering and classification models.
+        NLP-based feature engineering and supervised classification models.
       </p>
       <p class="tech">Python • Scikit-learn • NLP</p>
     </div>
 
     <div class="project">
-      <h3>
-        <a href="projects/bigmart.html">BigMart Sales Predictor</a>
-      </h3>
+      <h3>BigMart Sales Predictor</h3>
       <p>
         End-to-end machine learning pipeline for retail sales forecasting using
-        structured data and regression models.
+        structured data, feature preprocessing, and regression models.
       </p>
       <p class="tech">Python • Pandas • Machine Learning</p>
     </div>
 
     <div class="project">
-      <h3>
-        <a href="projects/iot-health.html">IoT Health Monitor</a>
-      </h3>
+      <h3>IoT Health Monitor</h3>
       <p>
-        IoT-based health monitoring system using sensors and MQTT for real-time
-        data collection and analysis.
+        IoT-based health monitoring system for real-time sensor data collection
+        and transmission using MQTT and embedded devices.
       </p>
       <p class="tech">ESP32 • MQTT • Sensors • Python</p>
     </div>
 
     <div class="project">
-      <h3>
-        <a href="projects/student-stress.html">Student Stress Predictor</a>
-      </h3>
+      <h3>Student Stress Predictor</h3>
       <p>
         Predictive machine learning model to analyze and forecast student stress
-        levels based on behavioral and academic indicators.
+        levels based on behavioral, academic, and survey-based features.
       </p>
-      <p class="tech">Python • ML • Data Analysis</p>
+      <p class="tech">Python • Machine Learning • Data Analysis</p>
     </div>
+
+    <div class="project">
+      <h3>Network Traffic & Protocol Analysis (Course Project)</h3>
+      <p>
+        Hands-on network analysis project completed as part of graduate-level
+        coursework, involving packet-level inspection, protocol behavior
+        analysis, and traffic characterization using real network traces.
+      </p>
+      <p class="tech">Wireshark • TCP/IP • UDP • ICMP • Network Analysis</p>
+    </div>
+
   </section>
 
   <!-- FOOTER -->
