--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <h2>About</h2>
     <p>
       I am a graduate student in Computer Engineering at NYU with hands-on
-      experience building distributed systems, data pipelines, and machine
-      learning applications. My work spans systems engineering, networking,
-      scalable data processing, and applied machine learning, with a strong
-      emphasis on practical, end-to-end implementations.
+      experience building distributed systems, data pipelines, machine learning
+      applications, and networking projects. My work spans systems engineering,
+      scalable data processing, cloud-based applications, and applied machine
+      learning with a strong emphasis on end-to-end, real-world implementations.
     </p>
   </section>
 
@@ -39,16 +39,24 @@
     <h2>Projects</h2>
 
     <div class="project">
-      <h3>SocialPulse</h3>
+      <h3>
+        <a href="https://github.com/5ushh/SocialPulse" target="_blank">
+          SocialPulse
+        </a>
+      </h3>
       <p>
         Distributed big-data NLP pipeline for sentiment analysis, topic modeling,
-        and virality prediction using large-scale social media data.
+        and virality prediction at scale using large social media datasets.
       </p>
       <p class="tech">Spark • Python • NLP • Streamlit</p>
     </div>
 
     <div class="project">
-      <h3>Fake Account Detector</h3>
+      <h3>
+        <a href="https://github.com/5ushh/fake-account-detector" target="_blank">
+          Fake Account Detector
+        </a>
+      </h3>
       <p>
         Machine learning system to identify fake social media accounts using
         NLP-based feature engineering and supervised classification models.
@@ -57,38 +65,54 @@
     </div>
 
     <div class="project">
-      <h3>BigMart Sales Predictor</h3>
+      <h3>
+        <a href="https://github.com/5ushh/bigmart-sales-predictor" target="_blank">
+          BigMart Sales Predictor
+        </a>
+      </h3>
       <p>
         End-to-end machine learning pipeline for retail sales forecasting using
-        structured data, feature preprocessing, and regression models.
+        structured data, preprocessing, and regression models.
       </p>
       <p class="tech">Python • Pandas • Machine Learning</p>
     </div>
 
     <div class="project">
-      <h3>IoT Health Monitor</h3>
+      <h3>
+        <a href="https://github.com/5ushh/iot-health-monitor" target="_blank">
+          IoT Health Monitor
+        </a>
+      </h3>
       <p>
-        IoT-based health monitoring system for real-time sensor data collection
-        and transmission using MQTT and embedded devices.
+        IoT-based health monitoring system using embedded sensors and MQTT for
+        real-time data collection, transmission, and analysis.
       </p>
       <p class="tech">ESP32 • MQTT • Sensors • Python</p>
     </div>
 
     <div class="project">
-      <h3>Student Stress Predictor</h3>
+      <h3>
+        <a href="https://github.com/5ushh/student-stress-predictor" target="_blank">
+          Student Stress Predictor
+        </a>
+      </h3>
       <p>
         Predictive machine learning model to analyze and forecast student stress
-        levels based on behavioral, academic, and survey-based features.
+        levels based on behavioral, academic, and survey-based indicators.
       </p>
       <p class="tech">Python • Machine Learning • Data Analysis</p>
     </div>
 
     <div class="project">
-      <h3>Network Traffic & Protocol Analysis (Course Project)</h3>
+      <h3>
+        <a href="https://github.com/5ushh" target="_blank">
+          Network Traffic & Protocol Analysis (Course Project)
+        </a>
+      </h3>
       <p>
-        Hands-on network analysis project completed as part of graduate-level
-        coursework, involving packet-level inspection, protocol behavior
-        analysis, and traffic characterization using real network traces.
+        Graduate-level networking coursework involving packet-level inspection,
+        protocol behavior analysis, and traffic characterization using real
+        network traces.
       </p>
       <p class="tech">Wireshark • TCP/IP • UDP • ICMP • Network Analysis</p>
     </div>
