--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
   <!-- HEADER -->
   <header>
     <h1>Sushmitha Vashist</h1>
@@ -27,10 +28,9 @@
     <h2>About</h2>
     <p>
       I am a graduate student in Computer Engineering at NYU with hands-on
-      experience building distributed systems, data pipelines, machine learning
-      applications, and networking projects. My work spans systems engineering,
-      scalable data processing, cloud-based applications, and applied machine
-      learning with a strong emphasis on end-to-end, real-world implementations.
+      experience building distributed systems, data pipelines, networking
+      projects, and machine learning applications. My work emphasizes
+      practical, end-to-end implementations across systems, cloud, and data.
     </p>
   </section>
 
@@ -46,7 +46,7 @@
       </h3>
       <p>
         Distributed big-data NLP pipeline for sentiment analysis, topic modeling,
-        and virality prediction at scale using large social media datasets.
+        and virality prediction using large-scale social media data.
       </p>
       <p class="tech">Spark • Python • NLP • Streamlit</p>
     </div>
@@ -72,7 +72,7 @@
       </h3>
       <p>
         End-to-end machine learning pipeline for retail sales forecasting using
-        structured data, preprocessing, and regression models.
+        structured data, feature preprocessing, and regression models.
       </p>
       <p class="tech">Python • Pandas • Machine Learning</p>
     </div>
@@ -85,7 +85,7 @@
       </h3>
       <p>
         IoT-based health monitoring system using embedded sensors and MQTT for
-        real-time data collection, transmission, and analysis.
+        real-time data collection and transmission.
       </p>
       <p class="tech">ESP32 • MQTT • Sensors • Python</p>
     </div>
@@ -98,9 +98,9 @@
       </h3>
       <p>
         Predictive machine learning model to analyze and forecast student stress
-        levels based on behavioral, academic, and survey-based indicators.
+        levels using behavioral and academic indicators.
       </p>
-      <p class="tech">Python • Machine Learning • Data Analysis</p>
+      <p class="tech">Python • ML • Data Analysis</p>
     </div>
 
     <div class="project">
@@ -111,8 +111,7 @@
       </h3>
       <p>
         Graduate-level networking coursework involving packet-level inspection,
-        protocol behavior analysis, and traffic characterization using real
-        network traces.
+        protocol behavior analysis, and traffic characterization.
       </p>
       <p class="tech">Wireshark • TCP/IP • UDP • ICMP • Network Analysis</p>
     </div>
@@ -123,6 +122,8 @@
   <footer>
     <p>© 2025 Sushmitha Vashist</p>
   </footer>
+
 </body>
 </html>
+
 
